# genai-short-movie

./: .gitignore  Dockerfile  README.md  docker-compose.yml  final_script.json  latest_story.txt  pyproject.toml
UMLs/: High level Diagram.drawio
src/: bg_tasks.py  celery_worker.py  db.py  log_mechs.py  main.py
src/agents/: __init__.py  abstract.py  base_llms.py  parent_graph.py
src/agents/script_writter/: prompt.py  prompt2.py  script_writer_llm.py
src/agents/story_teller/: llm_init.py  prompt.py  story_teller_llm.py
src/auth/: handler.py  middleware.py
src/db_ops/: logging.py  scripts.py  stories.py  users.py
src/functions/: bg_tasks.py  profanity.py
src/models/: logging.py  stories.py  users.py
src/orm/: logging.py  scripts.py  stories.py  users.py
src/routers/: __init__.py  admin.py  movie.py  output_stream.py
src/schemas/: movie.py  scripts.py
